--- a/app.json
+++ b/app.json
@@ -33,7 +33,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
@@ -41,7 +42,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "91205aa9-44fc-4575-bc50-7a7fee6c2e23"
+        "projectId": "10ddf9d3-0c1a-4b34-a636-920b979e8e46"
       }
     }
   }
