--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@sofyan.rs/react-native-thermal-receipt-printer": "^1.1.5",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "expo": "53.0.18",
@@ -37,6 +36,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-bluetooth-escpos-printer": "^0.0.5",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
