--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,14 @@ buildscript {
   }
 }
 
+ext {
+    compileSdkVersion = 35
+    targetSdkVersion = 35
+    minSdkVersion = 24
+}
+
+
+
 def reactNativeAndroidDir = new File(
   providers.exec {
     workingDir(rootDir)
